@@ -1,0 +1,54 @@
+con
+	_clkfreq = 20000000
+	_clkmode = 16779595
+dat
+	nop
+	cogid	pa
+	coginit	pa,##$404
+	orgh	$10
+	long	0	'reserved
+	long	0 ' clock frequency: will default to 20000000
+	long	0 ' clock mode: will default to $100094b
+	orgh	$400
+ _ret_	mov	result1, #0
+	org	0
+entry
+
+_main
+	rdlong	_var01, objptr
+	waitx	#1
+	rdlong	arg01, objptr
+	add	_var01, arg01
+	mov	outa, _var01
+_main_ret
+	ret
+builtin_bytefill_
+        shr	arg03, #1 wc
+ if_c   wrbyte	arg02, arg01
+ if_c   add	arg01, #1
+        movbyts	arg02, #0
+builtin_wordfill_
+        shr	arg03, #1 wc
+ if_c   wrword	arg02, arg01
+ if_c   add	arg01, #2
+        setword	arg02, arg02, #1
+builtin_longfill_
+        wrfast	#0,arg01
+        cmp	arg03, #0 wz
+ if_nz  rep	#1, arg03
+ if_nz  wflong	arg02
+        ret
+
+objptr
+	long	@objmem
+COG_BSS_START
+	fit	480
+	orgh
+objmem
+	long	0[1]
+	org	COG_BSS_START
+_var01
+	res	1
+arg01
+	res	1
+	fit	480
