@@ -2,6 +2,7 @@ Version 7.5.1
 - Added ioctl function to libc.a
 - Fixed snprintf return values
 - Improved interaction of conditional assembly and temporary labels
+- Suppress combining of memory operations across a wait instruction
 
 Version 7.5.0
 - Fixed CMP with src-only registers like PHSA
